# inputmethod_imf

./: 123.patch  AGENTS.md  BUILD.gn  CODEOWNERS  OAT.xml  README_zh.md  bundle.json  hisysevent.yaml  inputmethod.gni  jiaoXiayoYi.patch  publicity.xml
common/: BUILD.gn  block_queue.h  ffrt_utils.h  queue.h  wake_queue.h
common/imf_hisysevent/: BUILD.gn
common/imf_hisysevent/include/: ima_hisysevent_reporter.h  imc_hisysevent_reporter.h  imf_hisysevent_info.h  imf_hisysevent_reporter.h  imf_hisysevent_util.h  imsa_hisysevent_reporter.h
common/imf_hisysevent/src/: ima_hisysevent_reporter.cpp  imc_hisysevent_reporter.cpp  imf_hisysevent_Info.cpp  imf_hisysevent_info.cpp  imf_hisysevent_reporter.cpp  imf_hisysevent_util.cpp  imsa_hisysevent_reporter.cpp
common/include/: bit_state_manager.h  bite_state_manager.h  block_queue.h  color_parser.h  error_code_map.h  fair_lock.h  fair_lock_guard.h  global.h  inputmethod_dump.h  inputmethod_message_handler.h  inputmethod_sysevent.h  inputmethod_trace.h  itypes_util.h  message.h  message_handler.h  on_demand_start_stop_sa.h  string_utils.h  variant_util.h
common/src/: color_parser.cpp  global.cpp  input_death_recipient.cpp  inputmethod_dump.cpp  inputmethod_sysevent.cpp  inputmethod_trace.cpp  itypes_util.cpp  message.cpp  message_handler.cpp  on_demand_start_stop_sa.cpp  string_utils.cpp
frameworks/kits/extension/: BUILD.gn
frameworks/kits/extension_cj/: BUILD.gn
frameworks/ndk/: BUILD.gn
frameworks/ndk/include/: native_inputmethod_types.h  native_inputmethod_utils.h  native_message_handler_callback.h  native_text_changed_listener.h  native_text_editor.h
frameworks/ndk/src/: inputmethod_attach_options_capi.cpp  inputmethod_controller_capi.cpp  inputmethod_cursor_info_capi.cpp  inputmethod_inputmethod_proxy_capi.cpp  inputmethod_message_handler_proxy_capi.cpp  inputmethod_private_command_capi.cpp  inputmethod_text_avoid_info_capi.cpp  inputmethod_text_config_capi.cpp  inputmethod_texteditor_proxy_capi.cpp  native_capi_utils.cpp  native_input_method_texteditor_proxy.cpp  native_inputmethod_api.cpp  native_message_handler_callback.cpp  native_text_changed_listener.cpp
interfaces/inner_api/imf_hook/: BUILD.gn
interfaces/inner_api/inputmethod_ability/: BUILD.gn  inputmethod_ability.versionscript
interfaces/inner_api/inputmethod_controller/: BUILD.gn  inputmethod_client.versionscript
interfaces/kits/js/: BUILD.gn  extra_config_ani.h  extra_config_napi.h
services/: BUILD.gn
services/adapter/enable_ime_provider/: BUILD.gn
services/adapter/keyboard/: BUILD.gn  input_event_callback.h  keyboard_event.cpp  keyboard_event.h
services/adapter/settings_data_provider/: BUILD.gn
services/dfx/: BUILD.gn
services/dfx/include/: inputmethod_dump.h  inputmethod_sysevent.h  inputmethod_trace.h
services/dfx/src/: inputmethod_dump.cpp  inputmethod_sysevent.cpp  inputmethod_trace.cpp
services/dialog/: BUILD.gn  input_method_choose_dialog.hap  input_method_select.hap
services/dialog/AppScope/: app.json  app.json5
services/dialog/signature/: InputMethodChooseDialog.gni  openharmony_sx.p7b
services/file/: BUILD.gn
services/file/include/: file_operator.h
services/file/src/: file_operator.cpp
services/hook/include/: imf_hook_manager.h
services/hook/src/: imf_hook_manager.cpp
services/identity_checker/include/: identity_checker.h  (+1 more)
services/include/: bundle_checker.h  client_group.h  freeze_manager.h  full_ime_info_manager.h  global.h  i_input_control_channel.h  i_input_method_system_ability.h  i_platform_api.h  i_platform_callback.h  im_common_event_manager.h  ime_aging_manager.h  ime_cache_manager.h  ime_cfg_manager.h  ime_event_listener_manager.h  ime_info_inquirer.h  ime_lifecycle_manager.h  ime_state_manager.h  ime_state_manager_factory.h  input_attribute.h  input_channel.h  input_control_channel_proxy.h  input_control_channel_service_impl.h  input_control_channel_stub.h  input_method_ability_connection_stub.h  input_method_config_parser.h  input_method_info.h  input_method_property.h  input_method_setting.h  input_method_system_ability.h  input_method_system_ability_stub.h  input_type_manager.h  inputmethod_service_ipc_interface_code.h  keyboard_type.h  message.h  message_handler.h  notify_service_impl.h  peruser_session.h  peruser_setting.h  platform.h  platform_callback_stub.h  (+4 more)
services/json/: BUILD.gn
services/src/: bundle_checker.cpp  client_group.cpp  freeze_manager.cpp  full_ime_info_manager.cpp  global.cpp  im_common_event_manager.cpp  ime_aging_manager.cpp  ime_cache_manager.cpp  ime_cfg_manager.cpp  ime_event_listener_manager.cpp  ime_info_inquirer.cpp  ime_lifecycle_manager.cpp  ime_state_manager.cpp  ime_state_manager_factory.cpp  input_channel.cpp  input_control_channel_proxy.cpp  input_control_channel_service_impl.cpp  input_control_channel_stub.cpp  input_method_ability_connection_stub.cpp  input_method_config_parser.cpp  input_method_info.cpp  input_method_property.cpp  input_method_setting.cpp  input_method_system_ability.cpp  input_method_system_ability.cpp.rej  input_method_system_ability_stub.cpp  input_type_manager.cpp  keyboard_type.cpp  message.cpp  message_handler.cpp  notify_service_impl.cpp  peruser_session.cpp  peruser_setting.cpp  platform.cpp  platform_callback_stub.cpp  sys_cfg_parser.cpp  userImeCfg_manager.cpp  user_session_manager.cpp
services/userImeCfg/: BUILD.gn  userImeCfg.json
test/common/: BUILD.gn  text_listener.h
test/fuzztest/: BUILD.gn
test/unittest/: BUILD.gn  input_method_client_test.cpp  inputmethod_panel_sham_test.cpp
tools/ime/: BUILD.gn
unitest/: BUILD.gn
unitest/src/: input_method_ability_execption_test.cpp  input_method_ability_test.cpp  input_method_controller_test.cpp  input_method_dfx_test.cpp  input_method_private_member_test.cpp  input_method_service_test.cpp  input_method_switch_test.cpp  input_method_utils_test.cpp  permission_verification_exception_test.cpp  permission_verification_execption_test.cpp
utils/: BUILD.gn
utils/include/: file_manager.h  imf_file_manager.h
utils/src/: file_manager.cpp  imf_file_manager.cpp
(+1196 files in other folders)
