# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("inputmethod_common_native_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/include",
    "${inputmethod_path}/frameworks/native/inputmethod_ability/include",
  ]
}

ohos_shared_library("inputmethod_common") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  cflags_cc = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]
  sources = [
    "src/global.cpp",
    "src/input_death_recipient.cpp",
    "src/inputmethod_dump.cpp",
    "src/inputmethod_sysevent.cpp",
    "src/inputmethod_trace.cpp",
    "src/itypes_util.cpp",
    "src/message.cpp",
    "src/message_handler.cpp",
  ]

  configs = [ ":inputmethod_common_native_config" ]

  public_configs = [ ":inputmethod_common_native_config" ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "input:libmmi-client",
    "ipc:ipc_single",
  ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}
