# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("imf_hisysevent_native_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${inputmethod_path}/frameworks/native/inputmethod_ability/include",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/include",
    "${inputmethod_path}/services/json/include",
  ]
}

ohos_shared_library("imf_hisysevent") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  cflags_cc = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]
  sources = [
    "src/ima_hisysevent_reporter.cpp",
    "src/imc_hisysevent_reporter.cpp",
    "src/imf_hisysevent_info.cpp",
    "src/imf_hisysevent_reporter.cpp",
    "src/imf_hisysevent_util.cpp",
    "src/imsa_hisysevent_reporter.cpp",
  ]

  deps = [ "${inputmethod_path}/services/json:imf_json_static" ]

  configs = [ ":imf_hisysevent_native_config" ]

  public_configs = [ ":imf_hisysevent_native_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_single",
  ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}
