# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

ohos_shared_library("ohinputmethod") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }
  output_name = "ohinputmethod"
  output_extension = "so"

  sources = [
    "src/inputmethod_attach_options_capi.cpp",
    "src/inputmethod_controller_capi.cpp",
    "src/inputmethod_cursor_info_capi.cpp",
    "src/inputmethod_inputmethod_proxy_capi.cpp",
    "src/inputmethod_private_command_capi.cpp",
    "src/inputmethod_text_avoid_info_capi.cpp",
    "src/inputmethod_text_config_capi.cpp",
    "src/inputmethod_texteditor_proxy_capi.cpp",
    "src/native_capi_utils.cpp",
    "src/native_message_handler_callback.cpp",
    "src/native_text_changed_listener.cpp",
  ]
  include_dirs = [
    "include",
    "${inputmethod_path}/interfaces/kits/c",
  ]
  deps = [ "${inputmethod_path}/interfaces/inner_api/inputmethod_controller:inputmethod_client" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_single",
  ]

  innerapi_tags = [ "ndk" ]
  subsystem_name = "inputmethod"
  part_name = "imf"
}
