# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

ohos_static_library("inputmethod_dfx_static") {
  sources = [
    "src/inputmethod_dump.cpp",
    "src/inputmethod_sysevent.cpp",
    "src/inputmethod_trace.cpp",
  ]

  include_dirs = [
    "include",
    "${inputmethod_path}/services/include",
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_single",
  ]
  subsystem_name = "inputmethod"
  part_name = "imf"
}
