# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

group("input_method_choose_dialog") {
  deps = [ ":input_method_choose_hap" ]
}

ohos_hap("input_method_choose_hap") {
  hap_profile = "entry/src/main/module.json"

  deps = [
    ":input_method_choose_dialog_js_assets",
    ":input_method_choose_dialog_resources",
  ]

  certificate_profile = "signature/openharmony_sx.p7b"
  hap_name = "input_method_choose_dialog"
  subsystem_name = "applications"
  part_name = "prebuilt_hap"
  publicity_file = "${inputmethod_path}/publicity.xml"
  module_install_dir = "app/com.ohos.inputmethodchoosedialog"
}

ohos_js_assets("input_method_choose_dialog_js_assets") {
  hap_profile = "entry/src/main/module.json"
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_app_scope("input_method_choose_dialog_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_resources("input_method_choose_dialog_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":input_method_choose_dialog_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}
