# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("imf_json_config") {
  include_dirs = [
    "include",
    "${inputmethod_path}/common/include",
  ]
}

ohos_static_library("imf_json_static") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [ "src/serializable.cpp" ]

  public_configs = [ ":imf_json_config" ]

  cflags_cc = [ "-fvisibility=hidden" ]

  public_external_deps = [ "cJSON:cjson" ]
  external_deps = [ "hilog:libhilog" ]
  subsystem_name = "inputmethod"
  part_name = "imf"
}
