# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("test_common_config") {
  visibility = [ ":*" ]
  include_dirs = [ "./" ]
  ldflags = [ "-Wl,--exclude-libs=ALL" ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
  ]
}

config("test_common_public_config") {
  visibility = [ "./*" ]
  include_dirs = [ "include" ]
}

ohos_static_library("inputmethod_test_common") {
  testonly = true
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "src/ime_setting_listener_test_impl.cpp",
    "src/input_method_engine_listener_impl.cpp",
    "src/keyboard_listener_test_impl.cpp",
    "src/text_listener.cpp",
  ]
  configs = [ ":test_common_config" ]
  public_configs = [ ":test_common_public_config" ]
  deps = [
    "${inputmethod_path}/interfaces/inner_api/inputmethod_ability:inputmethod_ability",
    "${inputmethod_path}/interfaces/inner_api/inputmethod_controller:inputmethod_client_static",
  ]
  external_deps = [
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_single",
  ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}

ohos_static_library("inputmethod_fuzztest_common") {
  testonly = true
  branch_protector_ret = "pac_ret"
  sources = [
    "src/ime_setting_listener_test_impl.cpp",
    "src/input_method_engine_listener_impl.cpp",
    "src/keyboard_listener_test_impl.cpp",
    "src/text_listener.cpp",
  ]
  configs = [ ":test_common_config" ]
  public_configs = [ ":test_common_public_config" ]
  deps = [
    "${inputmethod_path}/interfaces/inner_api/inputmethod_ability:inputmethod_ability",
    "${inputmethod_path}/interfaces/inner_api/inputmethod_controller:inputmethod_client_fuzz_static",
  ]
  external_deps = [
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_single",
  ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}
