# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "agentstub_fuzzer:fuzztest",
    "controlchannelstub_fuzzer:fuzztest",
    "corestub_fuzzer:fuzztest",
    "datachannelstub_fuzzer:fuzztest",
    "enableimedataparse_fuzzer:fuzztest",
    "imeeventmonitormanager_fuzzer:fuzztest",
    "imesystemchannel_fuzzer:fuzztest",
    "imfhisyseventreport_fuzzer:fuzztest",
    "inputclientstub_fuzzer:fuzztest",
    "inputmethodability_fuzzer:fuzztest",
    "inputmethodcontroller_fuzzer:fuzztest",
    "inputmethodsystemability_fuzzer:fuzztest",
    "keyeventconsumer_fuzzer:fuzztest",
    "perusersession_fuzzer:fuzztest",
    "securitymodeparser_fuzzer:fuzztest",
    "settingsdatautils_fuzzer:fuzztest",
    "systemabilitystub_fuzzer:fuzztest",
    "systemabilitystubfuzztest:system_ability_stub_fuzztest",
    "systemcmdchannelstub_fuzzer:fuzztest",
  ]
}
