# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

#################################group#########################################
group("unittest") {
  testonly = true
  deps = []

  deps += [
    "cpp_test:IdentityCheckerTest",
    "cpp_test:ImeProxyTest",
    "cpp_test:InputMethodAbilityTest",
    "cpp_test:InputMethodAttachTest",
    "cpp_test:InputMethodControllerTest",
    "cpp_test:InputMethodDfxTest",
    "cpp_test:InputMethodEditorTest",
    "cpp_test:InputMethodPanelTest",
    "cpp_test:InputMethodPrivateMemberTest",
    "cpp_test:InputMethodServiceTest",
    "cpp_test:InputMethodSwitchTest",
    "cpp_test:InputMethodUtilsTest",
    "cpp_test:NewImeSwitchTest",
    "cpp_test:TextListenerInnerApiTest",
    "cpp_test/common:inputmethod_tdd_util",
    "napi_test/src:GetInputMethodJsTest",
    "resource/bundle_dependencies/editorBox:editorBox",
    "resource/bundle_dependencies/extImfBundle:extImf",
    "resource/bundle_dependencies/newTestIme:newTestIme",
    "resource/ohos_test:copy_ohos_test",
  ]
}
###############################################################################
