# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")
import("//build/test.gni")

ohos_executable("ime") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "src/input_method_manager_command.cpp",
    "src/main.cpp",
  ]
  include_dirs = [
    "include",
    "${inputmethod_path}/interfaces/inner_api/inputmethod_controller/include",
  ]

  deps = [ "${inputmethod_path}/interfaces/inner_api/inputmethod_controller:inputmethod_client" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "input:libmmi-client",
  ]

  install_enable = true
  subsystem_name = "inputmethod"
  part_name = "imf"
}
